--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-# Ignore everything
-*
-!mods/**
-!mods
-!config/**
-!config
-!.gitignore
-!readme.md
+usercache.json
+usernamecache.json
+modlist.html
+logs
+llibrary
+libraries
+downloads
+resources
+saves
+structures
+.curseclient
+manifest.json
+minecraftinstance.json
+options.txt
+optionsof.txt
+optionsshaders.txt
+RLCraft v2.8.2 Changelog.txt
+FOR SERVERS ONLY - SET THESE IN SERVER.PROPERTIES.txt
+crafttweaker.log
+scripts
+crash-reports
+.mixin.out
+bendspacks
